--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -27,3 +27,8 @@ h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #E3E85A;
+  font-family: 'alex_brushregular', sans-serif;
+}
