--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,3 +5,7 @@
     <p><%= place.description %></p><br />
   </div>
 <% end %>
+
+<div class="booyah-box col-10 offset-1">
+  <%= will_paginate @places, previous_label: h('<'), next_lable: h('>') %>
+</div>
