--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -33,3 +33,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #E3E85A;
   font-family: 'alex_brushregular', sans-serif;
 }
+
+.invalid-feedback {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+}
