--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -40,3 +40,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 3px;
   padding: 2px 8px 2px 8px;
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#map {
+  height: 300px;
+}
