--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,10 +4,10 @@
   <br/><br/>
   <p><%= @place.description %></p>
 
-  <script>
+
 
 <% if @place.latitude.present? && @place.longitude.present? %>
-
+    <script>
     function initMap() {
 
       var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
@@ -24,14 +24,14 @@
 
       });
     }
-  </script>
+
 
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgvX7Gxn7qIvzkqZzUgVWKJnu8oZiv0Gs&callback=initMap">
   </script>
 
 <div id="map"></div>
-
+<script>
 <% end %>
 
 <br />
@@ -45,7 +45,7 @@
 </div>
 
 <div class="clear"></div>
-<%= simple_form_for @comment, url: '#' do |f| %>
+<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
   <%= f.input :message %>
   <%= f.input :rating %>
   <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
